--- a/test/css/style2.css
+++ b/test/css/style2.css
@@ -93,4 +93,39 @@ div:nth-of-type(17){
     height: 11px;
     background: url(../images/open.png);
 }
+div:nth-of-type(18){
+    width: 46px;
+    height: 44px;
+    background: url(../images/sina.png);
+}
+div:nth-of-type(19){
+    width: 384px;
+    height: 48px;
+    background: url(../images/loading.png);
+}
+div:nth-of-type(20){
+    width: 48px;
+    height: 48px;
+    background: url(../images/sina_logo.png);
+}
+div:nth-of-type(21){
+    width: 15px;
+    height: 12px;
+    background: url(../images/speaker.png);
+}
+div:nth-of-type(22){
+    width: 81px;
+    height: 38px;
+    background: url(../images/tips_icons.png);
+}
+div:nth-of-type(23){
+    width: 48px;
+    height: 48px;
+    background: url(../images/sina_logo.png);
+}
+div:nth-of-type(24){
+    width: 48px;
+    height: 48px;
+    background: url(../images/txweibo_logo.png);
+}
 
