--- a/test/output/css/style2.css
+++ b/test/output/css/style2.css
@@ -17,3 +17,10 @@ div:nth-of-type(14) {width: 16px; height: 16px; background: url(../images/sprite
 div:nth-of-type(15) {width: 16px; height: 16px; background: url(../images/sprite_1.png) -139px -56px;}
 div:nth-of-type(16) {width: 38px; height: 38px; background: url(../images/sprite_1.png) 0 -48px;}
 div:nth-of-type(17) {width: 13px; height: 11px; background: url(../images/sprite_1.png) -103px -72px;}
+div:nth-of-type(18) {width: 46px; height: 44px; background: url(../images/sprite_2.png) -96px -86px;}
+div:nth-of-type(19) {width: 384px; height: 48px; background: url(../images/sprite_2.png) 0 0;}
+div:nth-of-type(20) {width: 48px; height: 48px; background: url(../images/sprite_2.png) 0 -86px;}
+div:nth-of-type(21) {width: 15px; height: 12px; background: url(../images/sprite_2.png) -81px -48px;}
+div:nth-of-type(22) {width: 81px; height: 38px; background: url(../images/sprite_2.png) 0 -48px;}
+div:nth-of-type(23) {width: 48px; height: 48px; background: url(../images/sprite_2.png) 0 -86px;}
+div:nth-of-type(24) {width: 48px; height: 48px; background: url(../images/sprite_2.png) -48px -86px;}
