--- a/test/css/style.css
+++ b/test/css/style.css
@@ -7,41 +7,7 @@ div{
     margin: 20px;
     min-width: 10px;
 }
-div:nth-of-type(1){
-    width: 12px;
-    height: 12px;
-    background: url(../images/add.png);
-}
-div:nth-of-type(2){
-    width: 48px;
-    height: 48px;
-    background: url(../images/app_icon.png);
-}
-div:nth-of-type(3){
-    width: 43px;
-    height: 43px;
-    background: url(../images/badge.png);
-}
-div:nth-of-type(4){
-    width: 79px;
-    height: 18px;
-    background: url(../images/bright-star.png);
-}
-div:nth-of-type(5){
-    width: 15px;
-    height: 15px;
-    background: url(../images/close2.png);
-}
-div:nth-of-type(6){
-    width: 20px;
-    height: 60px;
-    background: url(../images/close.png);
-}
-div:nth-of-type(7){
-    width: 16px;
-    height: 16px;
-    background: url(../images/delete-down.png);
-}
+
 div:nth-of-type(8){
     width: 20px;
     height: 20px;
@@ -92,5 +58,36 @@ div:nth-of-type(17){
     width: 13px;
     height: 11px;
     background: url(../images/open.png);
+}
+div:nth-of-type(18){
+    width: 46px;
+    height: 44px;
+    background: url(../images/sina.png);
+}
+
+div:nth-of-type(20){
+    width: 48px;
+    height: 48px;
+    background: url(../images/sina_logo.png);
+}
+div:nth-of-type(21){
+    width: 15px;
+    height: 12px;
+    background: url(../images/speaker.png);
+}
+div:nth-of-type(22){
+    width: 81px;
+    height: 38px;
+    background: url(../images/tips_icons.png);
+}
+div:nth-of-type(23){
+    width: 48px;
+    height: 48px;
+    background: url(../images/sina_logo.png);
+}
+div:nth-of-type(24){
+    width: 48px;
+    height: 48px;
+    background: url(../images/txweibo_logo.png);
 }
 
