--- a/test/sprite_output/css/style.css
+++ b/test/sprite_output/css/style.css
@@ -1,19 +1,18 @@
 body {background: #ddd;}
 div {min-height: 10px; border: 1px solid #339; margin: 20px; min-width: 10px;}
-div:nth-of-type(1) {width: 12px; height: 12px; background: url(../images/sprite_style_0.png) -84px -53px;}
-div:nth-of-type(2) {width: 48px; height: 48px; background: url(../images/sprite_style_0.png) 0 0;}
-div:nth-of-type(3) {width: 43px; height: 43px; background: url(../images/sprite_style_0.png) -53px 0;}
-div:nth-of-type(4) {width: 79px; height: 18px; background: url(../images/sprite_style_0.png) 0 -76px;}
-div:nth-of-type(5) {width: 15px; height: 15px; background: url(../images/sprite_style_0.png) -63px -99px;}
-div:nth-of-type(6) {width: 20px; height: 60px; background: url(../images/sprite_style_0.png) -144px 0;}
-div:nth-of-type(7) {width: 16px; height: 16px; background: url(../images/sprite_style_0.png) -122px -64px;}
-div:nth-of-type(8) {width: 20px; height: 20px; background: url(../images/sprite_style_0.png) -144px -65px;}
-div:nth-of-type(9) {width: 79px; height: 18px; background: url(../images/sprite_style_0.png) 0 -53px;}
-div:nth-of-type(10) {width: 16px; height: 16px; background: url(../images/sprite_style_0.png) -122px -43px;}
-div:nth-of-type(11) {width: 16px; height: 16px; background: url(../images/sprite_style_0.png) -101px -64px;}
-div:nth-of-type(12) {width: 16px; height: 16px; background: url(../images/sprite_style_0.png) -42px -99px;}
-div:nth-of-type(13) {width: 16px; height: 16px; background: url(../images/sprite_style_0.png) -21px -99px;}
-div:nth-of-type(14) {width: 16px; height: 16px; background: url(../images/sprite_style_0.png) -101px -43px;}
-div:nth-of-type(15) {width: 16px; height: 16px; background: url(../images/sprite_style_0.png) 0 -99px;}
-div:nth-of-type(16) {width: 38px; height: 38px; background: url(../images/sprite_style_0.png) -101px 0;}
-div:nth-of-type(17) {width: 13px; height: 11px; background: url(../images/sprite_style_0.png) -83px -99px;}
+div:nth-of-type(8) {width: 20px; height: 20px; background: url(../images/sprite_style.png) -86px -53px;}
+div:nth-of-type(9) {width: 79px; height: 18px; background: url(../images/sprite_style.png) 0 -96px;}
+div:nth-of-type(10) {width: 16px; height: 16px; background: url(../images/sprite_style.png) -105px -96px;}
+div:nth-of-type(11) {width: 16px; height: 16px; background: url(../images/sprite_style.png) -126px -96px;}
+div:nth-of-type(12) {width: 16px; height: 16px; background: url(../images/sprite_style.png) -53px -64px;}
+div:nth-of-type(13) {width: 16px; height: 16px; background: url(../images/sprite_style.png) -53px -43px;}
+div:nth-of-type(14) {width: 16px; height: 16px; background: url(../images/sprite_style.png) -84px -96px;}
+div:nth-of-type(15) {width: 16px; height: 16px; background: url(../images/sprite_style.png) -111px -53px;}
+div:nth-of-type(16) {width: 38px; height: 38px; background: url(../images/sprite_style.png) -139px -49px;}
+div:nth-of-type(17) {width: 13px; height: 11px; background: url(../images/sprite_style.png) -106px -78px;}
+div:nth-of-type(18) {width: 46px; height: 44px; background: url(../images/sprite_style.png) -139px 0;}
+div:nth-of-type(20) {width: 48px; height: 48px; background: url(../images/sprite_style.png) 0 -43px;}
+div:nth-of-type(21) {width: 15px; height: 12px; background: url(../images/sprite_style.png) -86px -78px;}
+div:nth-of-type(22) {width: 81px; height: 38px; background: url(../images/sprite_style.png) 0 0;}
+div:nth-of-type(23) {width: 48px; height: 48px; background: url(../images/sprite_style.png) 0 -43px;}
+div:nth-of-type(24) {width: 48px; height: 48px; background: url(../images/sprite_style.png) -86px 0;}
