[bugfix]修复当css文件中出现了一个绝对路径的图片,会导致处在其后面的图片也无法合并的bug ------------------- [bugfix]修复当css文件中, 出现了一个无法访问的图片或者不存在的图片, 导致出错退出的bug
Signed-off-by: azrael <azrael@imatlas.com>

--- a/test/css/style2.css
+++ b/test/css/style2.css
@@ -36,12 +36,12 @@ div:nth-of-type(5){
 div:nth-of-type(11){
     width: 16px;
     height: 16px;
-    background: url(../images/level_1.png);
+    background: url(../images/level_1_not_exists.png);
 }
 div:nth-of-type(12){
     width: 16px;
     height: 16px;
-    background: url(../images/level_2.png);
+    background: url(http://www.qq.com/images/level_2.png);
 }
 div:nth-of-type(13){
     width: 16px;
