--- a/test/sprite_output/css/main.css
+++ b/test/sprite_output/css/main.css
@@ -53,3 +53,52 @@ div:nth-of-type(24) {width: 48px; height: 48px; background: url(../images/sprite
 div:nth-of-type(24) {width: 48px; height: 48px; background: url(../images/sprite_main_1.png) -53px -106px;}
 div:nth-of-type(24) {width: 48px; height: 48px; background: url(../images/sprite_main_0.png) -53px -96px;}
 div:nth-of-type(24) {width: 48px; height: 48px; background: url(../images/sprite_main_1.png) -243px 0;}
+
+body {background: #ddd;}
+@media screen {div {min-height: 10px; border: 1px solid #339; margin: 20px; min-width: 10px;}}
+div:nth-of-type(1) {width: 12px; height: 12px; background: url(../images/sprite_main_1.png) -263px -192px;}
+div:nth-of-type(2) {width: 48px; height: 48px; background: url(../images/sprite_main_1.png) -190px 0;}
+div:nth-of-type(3) {width: 43px; height: 43px; background: url(../images/sprite_main_0.png) 0 -149px;}
+div:nth-of-type(4) {width: 79px; height: 18px; background: url(../images/sprite_main_1.png) 0 -212px;}
+div:nth-of-type(5) {width: 15px; height: 15px; background: url(../images/sprite_main_1.png) -243px -192px;}
+div:nth-of-type(11) {width: 16px; height: 16px; background-image: url(../images/level_1_not_exists.png);}
+div:nth-of-type(12) {width: 16px; height: 16px; background-image: url(http://www.qq.com/images/level_2.png);}
+div:nth-of-type(13) {width: 16px; height: 16px; background: url(../images/sprite_main_1.png) -264px -171px;}
+div:nth-of-type(14) {width: 16px; height: 16px; background: url(../images/sprite_main_1.png) -243px -171px;}
+div:nth-of-type(15) {width: 16px; height: 16px; background: url(../images/sprite_main_1.png) -159px -74px;}
+div:nth-of-type(16) {width: 38px; height: 38px; background: url(../images/sprite_main_0.png) -86px -53px;}
+div:nth-of-type(17) {width: 13px; height: 11px; background: url(../images/sprite_main_1.png) -212px -159px;}
+div:nth-of-type(18) {width: 46px; height: 44px; background: url(../images/sprite_main_0.png) -318px -96px;}
+div:nth-of-type(19) {width: 384px; height: 48px; background: url(../images/sprite_main_0.png) 0 0;}
+div:nth-of-type(20) {width: 48px; height: 48px; background: url(../images/sprite_main_0.png) -106px -96px;}
+div:nth-of-type(21) {width: 15px; height: 12px; background: url(../images/sprite_main_1.png) -268px -152px;}
+div:nth-of-type(22) {width: 81px; height: 38px; background: url(../images/sprite_main_0.png) 0 -53px;}
+div:nth-of-type(23) {width: 48px; height: 48px; background: url(../images/sprite_main_0.png) -106px -96px;}
+div:nth-of-type(24) {width: 48px; height: 48px; background: url(../images/sprite_main_0.png) 0 -96px;}
+div:nth-of-type(24) {width: 48px; height: 48px; background: url(../images/sprite_main_1.png) -243px -53px;}
+div:nth-of-type(24) {width: 48px; height: 48px; background: url(../images/sprite_main_1.png) -53px -159px;}
+div:nth-of-type(24) {width: 48px; height: 48px; background: url(../images/sprite_main_1.png) -53px -53px;}
+div:nth-of-type(24) {width: 48px; height: 48px; background: url(../images/sprite_main_1.png) -53px -106px;}
+div:nth-of-type(24) {width: 48px; height: 48px; background: url(../images/sprite_main_0.png) -53px -96px;}
+div:nth-of-type(24) {width: 48px; height: 48px; background: url(../images/sprite_main_1.png) -243px 0;}
+
+body {background: #ddd;}
+div {min-height: 10px; border: 1px solid #339; margin: 20px; min-width: 10px;}
+div:nth-of-type(1) {width: 12px; height: 12px; background: url(../images/sprite_main_1.png) -263px -192px;}
+div:nth-of-type(2) {width: 48px; height: 48px; background: url(../images/sprite_main_1.png) -190px 0;}
+div:nth-of-type(3) {width: 43px; height: 43px; background: url(../images/sprite_main_0.png) 0 -149px;}
+div:nth-of-type(4) {width: 79px; height: 18px; background: url(../images/sprite_main_1.png) 0 -212px;}
+div:nth-of-type(5) {width: 15px; height: 15px; background: url(../images/sprite_main_1.png) -243px -192px;}
+div:nth-of-type(6) {width: 20px; height: 60px; background: url(../images/sprite_main_1.png) -243px -106px;}
+div:nth-of-type(7) {width: 16px; height: 16px; background: url(../images/sprite_main_1.png) -159px -127px;}
+div:nth-of-type(8) {width: 20px; height: 20px; background: url(../images/sprite_main_1.png) -268px -106px;}
+div:nth-of-type(9) {width: 79px; height: 18px; background: url(../images/sprite_main_1.png) -84px -212px;}
+div:nth-of-type(10) {width: 16px; height: 16px; background: url(../images/sprite_main_1.png) -268px -131px;}
+div:nth-of-type(11) {width: 16px; height: 16px; background: url(../images/sprite_main_1.png) -159px -106px;}
+div:nth-of-type(12) {width: 16px; height: 16px; background: url(../images/sprite_main_1.png) -159px -53px;}
+div:nth-of-type(13) {width: 16px; height: 16px; background: url(../images/sprite_main_1.png) -264px -171px;}
+div:nth-of-type(14) {width: 16px; height: 16px; background: url(../images/sprite_main_1.png) -243px -171px;}
+div:nth-of-type(15) {width: 16px; height: 16px; background: url(../images/sprite_main_1.png) -159px -74px;}
+div:nth-of-type(16) {width: 38px; height: 38px; background: url(../images/sprite_main_0.png) -86px -53px;}
+div:nth-of-type(17) {width: 13px; height: 11px; background: url(../images/sprite_main_1.png) -212px -159px;}
+
