--- a/test/sprite_output/css/style3.css
+++ b/test/sprite_output/css/style3.css
@@ -1,19 +1,19 @@
 body {background: #ddd;}
 div {min-height: 10px; border: 1px solid #339; margin: 20px; min-width: 10px;}
-div:nth-of-type(1) {width: 12px; height: 12px; background: url(../images/sprite_style_1.png) -190px -79px;}
-div:nth-of-type(2) {width: 48px; height: 48px; background: url(../images/sprite_style_1.png) 0 -53px;}
-div:nth-of-type(3) {width: 43px; height: 43px; background: url(../images/sprite_style_0.png) -51px -202px;}
-div:nth-of-type(4) {width: 79px; height: 18px; background: url(../images/sprite_style_1.png) 0 -159px;}
-div:nth-of-type(5) {width: 15px; height: 15px; background: url(../images/sprite_style_1.png) -190px -42px;}
-div:nth-of-type(6) {width: 20px; height: 60px; background: url(../images/sprite_style3.png) 0 0;}
-div:nth-of-type(7) {width: 16px; height: 16px; background: url(../images/sprite_style3.png) -25px 0;}
-div:nth-of-type(8) {width: 20px; height: 20px; background: url(../images/sprite_style_1.png) -159px -53px;}
-div:nth-of-type(9) {width: 79px; height: 18px; background: url(../images/sprite_style_1.png) -84px -159px;}
-div:nth-of-type(10) {width: 16px; height: 16px; background: url(../images/sprite_style_1.png) -190px -21px;}
-div:nth-of-type(11) {width: 16px; height: 16px; background: url(../images/sprite_style_1.png) -190px 0;}
-div:nth-of-type(12) {width: 16px; height: 16px; background: url(../images/sprite_style_1.png) -168px -159px;}
-div:nth-of-type(13) {width: 16px; height: 16px; background: url(../images/sprite_style_1.png) -159px -127px;}
-div:nth-of-type(14) {width: 16px; height: 16px; background: url(../images/sprite_style_1.png) -159px -106px;}
-div:nth-of-type(15) {width: 16px; height: 16px; background: url(../images/sprite_style_1.png) -159px -78px;}
-div:nth-of-type(16) {width: 38px; height: 38px; background: url(../images/sprite_style_0.png) -245px -159px;}
-div:nth-of-type(17) {width: 13px; height: 11px; background: url(../images/sprite_style_1.png) -190px -96px;}
+div:nth-of-type(1) {width: 12px; height: 12px; background: url(../images/sprite_main_1.png) -263px -192px;}
+div:nth-of-type(2) {width: 48px; height: 48px; background: url(../images/sprite_main_1.png) -190px 0;}
+div:nth-of-type(3) {width: 43px; height: 43px; background: url(../images/sprite_main_0.png) 0 -149px;}
+div:nth-of-type(4) {width: 79px; height: 18px; background: url(../images/sprite_main_1.png) 0 -212px;}
+div:nth-of-type(5) {width: 15px; height: 15px; background: url(../images/sprite_main_1.png) -243px -192px;}
+div:nth-of-type(6) {width: 20px; height: 60px; background: url(../images/sprite_main_1.png) -243px -106px;}
+div:nth-of-type(7) {width: 16px; height: 16px; background: url(../images/sprite_main_1.png) -159px -127px;}
+div:nth-of-type(8) {width: 20px; height: 20px; background: url(../images/sprite_main_1.png) -268px -106px;}
+div:nth-of-type(9) {width: 79px; height: 18px; background: url(../images/sprite_main_1.png) -84px -212px;}
+div:nth-of-type(10) {width: 16px; height: 16px; background: url(../images/sprite_main_1.png) -268px -131px;}
+div:nth-of-type(11) {width: 16px; height: 16px; background: url(../images/sprite_main_1.png) -159px -106px;}
+div:nth-of-type(12) {width: 16px; height: 16px; background: url(../images/sprite_main_1.png) -159px -53px;}
+div:nth-of-type(13) {width: 16px; height: 16px; background: url(../images/sprite_main_1.png) -264px -171px;}
+div:nth-of-type(14) {width: 16px; height: 16px; background: url(../images/sprite_main_1.png) -243px -171px;}
+div:nth-of-type(15) {width: 16px; height: 16px; background: url(../images/sprite_main_1.png) -159px -74px;}
+div:nth-of-type(16) {width: 38px; height: 38px; background: url(../images/sprite_main_0.png) -86px -53px;}
+div:nth-of-type(17) {width: 13px; height: 11px; background: url(../images/sprite_main_1.png) -212px -159px;}
