--- a/test/css/style.css
+++ b/test/css/style.css
@@ -3,94 +3,11 @@ body{
 }
 div{
     min-height: 10px;
-    border: 1px solid #339;
+    border: 1px solid #8A7676;
     margin: 20px;
     min-width: 10px;
+    float: left;
 }
-
-div:nth-of-type(8){
-    width: 20px;
-    height: 20px;
-    background: url(../images/friends.png);
-}
-div:nth-of-type(9){
-    width: 79px;
-    height: 18px;
-    background: url(../images/gray-star.png);
-}
-div:nth-of-type(10){
-    width: 16px;
-    height: 16px;
-    background: url(../images/level_0.png);
-}
-div:nth-of-type(11){
-    width: 16px;
-    height: 16px;
-    background: url(../images/level_1.png);
-}
-div:nth-of-type(12){
-    width: 16px;
-    height: 16px;
-    background: url(../images/level_2.png);
-}
-div:nth-of-type(13){
-    width: 16px;
-    height: 16px;
-    background: url(../images/level_3.png);
-}
-div:nth-of-type(14){
-    width: 16px;
-    height: 16px;
-    background: url(../images/level_4.png);
-}
-div:nth-of-type(15){
-    width: 16px;
-    height: 16px;
-    background: url(../images/level_5.png);
-}
-
-div:nth-of-type(16){
-    width: 38px;
-    height: 38px;
-    background: url(../images/info.png);
-}
-div:nth-of-type(17){
-    width: 13px;
-    height: 11px;
-    background: url(../images/open.png);
-}
-div:nth-of-type(18){
-    width: 46px;
-    height: 44px;
-    background: url(../images/sina.png);
-}
-
-div:nth-of-type(20){
-    width: 48px;
-    height: 48px;
-    background: url(../images/sina_logo.png);
-}
-div:nth-of-type(21){
-    width: 15px;
-    height: 12px;
-    background: url(../images/speaker.png);
-}
-div:nth-of-type(22){
-    width: 81px;
-    height: 38px;
-    background: url(../images/tips_icons.png);
-}
-div:nth-of-type(23){
-    width: 48px;
-    height: 48px;
-    background: url(../images/sina_logo.png);
-}
-div:nth-of-type(24){
-    width: 48px;
-    height: 48px;
-    background: url(../images/txweibo_logo.png);
-}
-
 div:nth-of-type(1){
     width: 12px;
     height: 12px;
@@ -107,8 +24,9 @@ div:nth-of-type(3){
     background: url(../images/badge.png);
 }
 div:nth-of-type(4){
-    width: 79px;
+    width: 15px;
     height: 18px;
+    /* 已合并的图片 */
     background: url(../images/bright-star.png);
 }
 div:nth-of-type(5){
@@ -117,179 +35,94 @@ div:nth-of-type(5){
     background: url(../images/close2.png);
 }
 
-div:nth-of-type(11){
+div:nth-of-type(6){
+    width: 20px;
+    height: 20px;
+    background: url(../images/friends.png);
+}
+div:nth-of-type(7){
+    width: 15px;
+    height: 18px;
+    /* 位置有偏移的, 已合并的图片 */
+    background: url(../images/gray-star.png) -64px 0;
+}
+div:nth-of-type(8){
+    width: 16px;
+    height: 16px;
+    background: url(../images/level_0.png);
+}
+div:nth-of-type(9){
     width: 16px;
     height: 16px;
     background: url(../images/level_1.png);
 }
-div:nth-of-type(12){
+div:nth-of-type(10){
     width: 16px;
     height: 16px;
     background: url(../images/level_2.png);
 }
-div:nth-of-type(13){
+div:nth-of-type(11){
     width: 16px;
     height: 16px;
     background: url(../images/level_3.png);
 }
-div:nth-of-type(14){
+div:nth-of-type(12){
     width: 16px;
     height: 16px;
-    background: url(../images/level_4.png);
+    border: 1px dotted red;
+    /* 网络的图片 */
+    background: url(http://www.qq.com/cdn/images/level_4.png);
 }
-div:nth-of-type(15){
+div:nth-of-type(13){
     width: 16px;
     height: 16px;
-    background: url(../images/level_5.png);
+    border: 1px dotted red;
+    /* 不存在的图片 */
+    background: url(../images/level_5_no_exits.png);
 }
 
-div:nth-of-type(16){
+div:nth-of-type(14){
     width: 38px;
     height: 38px;
     background: url(../images/info.png);
 }
-div:nth-of-type(17){
+div:nth-of-type(15){
     width: 13px;
     height: 11px;
-    background: url(../images/open.png);
+    background: blue url(../images/open.png);
 }
-/*div:nth-of-type(18){
+div:nth-of-type(16){
     width: 46px;
     height: 44px;
-    background: url(../images/in.png);
+    background: url(../images/sina.png);
 }
-div:nth-of-type(19){
-    width: 384px;
-    height: 48px;
-    background: url(../images/in2.png);
-}*/
-div:nth-of-type(20){
-    width: 48px;
-    height: 48px;
-    background: url(../images/sina_logo.png);
-}
-div:nth-of-type(21){
-    width: 15px;
-    height: 12px;
-    background: url(../images/speaker.png);
-}
-div:nth-of-type(22){
-    width: 81px;
-    height: 38px;
-    background: url(../images/tips_icons.png);
-}
-div:nth-of-type(23){
-    width: 48px;
-    height: 48px;
-    background: url(../images/sina_logo.png);
-}
-div:nth-of-type(24){
+
+div:nth-of-type(17){
     width: 48px;
     height: 48px;
     background: url(../images/txweibo_logo.png);
 }
-
-div:nth-of-type(24){
+div:nth-of-type(18){
     width: 48px;
     height: 48px;
-    background: url(../images/appmarket.png);
+    background: url(../images/sina_logo.png);
 }
 
-div:nth-of-type(24){
+div:nth-of-type(19){
     width: 48px;
     height: 48px;
-    background: url(../images/back_click.png);
+    border: 1px dotted red;
+    /* 重复的图片 */
+    background: url(../images/sina_logo.png);
 }
-
-div:nth-of-type(24){
-    width: 48px;
-    height: 48px;
-    background: url(../images/back_hover.png);
+div:nth-of-type(20){
+    width: 15px;
+    height: 12px;
+    background: url(../images/speaker.png);
 }
-div:nth-of-type(24){
-    width: 48px;
-    height: 48px;
-    background: url(../images/diskexplorer.png);
-}
-div:nth-of-type(24){
-    width: 48px;
-    height: 48px;
-    background: url(../images/doc.png);
-}
-div:nth-of-type(24){
-    width: 48px;
-    height: 48px;
-    background: url(../images/doc_o.png);
-}
-div:nth-of-type(24){
-    width: 48px;
-    height: 48px;
-    background: url(../images/file_default.png);
-}
-div:nth-of-type(24){
-    width: 48px;
-    height: 48px;
-    background: url(../images/file_excel.png);
-}
-
-div:nth-of-type(24){
-    width: 48px;
-    height: 48px;
-    background: url(../images/file_image.png);
-}
-
-div:nth-of-type(24){
-    width: 48px;
-    height: 48px;
-    background: url(../images/file_music.png);
-}
-div:nth-of-type(24){
-    width: 48px;
-    height: 48px;
-    background: url(../images/file_pdf.png);
-}
-div:nth-of-type(24){
-    width: 48px;
-    height: 48px;
-    background: url(../images/file_ppt.png);
-}
-div:nth-of-type(24){
-    width: 48px;
-    height: 48px;
-    background: url(../images/file_rar.png);
-}
-div:nth-of-type(24){
-    width: 48px;
-    height: 48px;
-    background: url(../images/file_txt.png);
-}
-div:nth-of-type(24){
-    width: 48px;
-    height: 48px;
-    background: url(../images/file_video.png);
-}
-div:nth-of-type(24){
-    width: 48px;
-    height: 48px;
-    background: url(../images/file_word.png);
-}
-div:nth-of-type(24){
-    width: 48px;
-    height: 48px;
-    background: url(../images/folder.png);
-}
-div:nth-of-type(24){
-    width: 48px;
-    height: 48px;
-    background: url(../images/folder_o.png);
-}
-div:nth-of-type(24){
-    width: 48px;
-    height: 48px;
-    background: url(../images/game.png);
-}
-div:nth-of-type(24){
-    width: 48px;
-    height: 48px;
-    background: url(../images/game_o.png);
+div:nth-of-type(21){
+    width: 40px;
+    height: 38px;
+    /* 位置有偏移的, 已合并的图片 */
+    background: url(../images/tips_icons.png) -41px 0;
 }
