--- a/test/css/style2.css
+++ b/test/css/style2.css
@@ -1,22 +1,28 @@
 body{
-    background: #ddd;
+    background: #ccc;
+}
+
+div{
+    min-height: 10px;
+    border: 1px solid #8A7676;
+    margin: 20px;
+    min-width: 10px;
+    float: left;
 }
 @media screen{
-    div{
-        min-height: 10px;
-        border: 1px solid #339;
-        margin: 20px;
-        min-width: 10px;
-    }
     div:nth-of-type(1){
-        width: 12px;
-        height: 12px;
-        background: url(../images/add.png);
+        width: 48px;
+        height: 48px;
+        background: url(../images/doc.png);
     }
     div:nth-of-type(2){
         width: 48px;
         height: 48px;
-        background: url(../images/app_icon.png);
+        background: url(../images/game.png);
+    }
+    div:nth-of-type(2):hover{
+        /* 没有指定宽高 */
+        background: url(../images/game_o.png);
     }
     div:nth-of-type(3){
         width: 43px;
@@ -24,117 +30,143 @@ body{
         background: url(../images/badge.png);
     }
     div:nth-of-type(4){
-        width: 79px;
+        width: 15px;
         height: 18px;
-        background: url(../images/bright-star.png);
+        /* 位置有偏移的, 已合并的图片 */
+        background: url(../images/bright-star.png) -32px 0;
     }
-    div:nth-of-type(5){
-        width: 15px;
-        height: 15px;
-        background: url(../images/close2.png);
+}
+div:nth-of-type(5){
+    width: 48px !important;
+    height: 48px !important;
+    /* 动画变更背景图片 */
+    -webkit-animation: forever 1s step-start infinite;
+}
+@-webkit-keyframes forever{
+    0%{
+        background: url(../images/doc.png);
     }
+    50% {
+        background: url(../images/doc_o.png);
+    }
+    100%{
+        background: url(../images/doc.png);
+    }
+}
+div:nth-of-type(6){
+    width: 48px;
+    height: 48px;
+    background: url(../images/loading.png);
+    /* 动画变更背景图片的位置 */
+    -webkit-animation: circle 1s step-end infinite;
+}
+@-webkit-keyframes circle{
+    0%{
+      background-position-x: 0%;
+    }
+    12.5%{
+      background-position-x: -100%;
+    }
+    25%{
+      background-position-x: -200%;
+    }
+    37.5%{
+      background-position-x: -300%;
+    }
+    50%{
+      background-position-x: -400%;
+    }
+    62.5%{
+      background-position-x: -500%;
+    }
+    75%{
+      background-position-x: -600%;
+    }
+    87.5%{
+      background-position-x: -700%;
+    }
+    100%{
+      background-position-x: -800%;
+    }
+}
+ 
+div:nth-of-type(7){
+    width: 110px;
+    height: 110px;
+    background: url(../images/play_icon.png);
+}
+div:nth-of-type(8){
+    width: 20px;
+    height: 20px;
+    background: url(../images/close.png) 0 -38px;
+}
+div:nth-of-type(9){
+    width: 90px;
+    height: 37px;
+    background: url(../images/back_click.png);
+}
+div:nth-of-type(9):hover{
+     /* 没有指定宽高 */
+    background: url(../images/back_hover.png);
+}
+div:nth-of-type(9):active{
+     /* 没有指定宽高, 重复的图片 */
+    background: url(../images/back_click.png);
+}
+div:nth-of-type(10){
+    width: 90px;
+    height: 37px;
+     /* 重复的图片 */
+    background: url(../images/back_hover.png);
+}
+div:nth-of-type(11){
+    width: 48px;
+    height: 48px;
+    background: url(../images/diskexplorer.png);
+}
 
-    div:nth-of-type(11){
-        width: 16px;
-        height: 16px;
-        background: url(../images/level_1_not_exists.png);
-    }
-    div:nth-of-type(12){
-        width: 16px;
-        height: 16px;
-        background: url(http://www.qq.com/images/level_2.png);
-    }
-    div:nth-of-type(13){
-        width: 16px;
-        height: 16px;
-        background: url(../images/level_3.png);
-    }
-    div:nth-of-type(14){
-        width: 16px;
-        height: 16px;
-        background: url(../images/level_4.png);
-    }
-    div:nth-of-type(15){
-        width: 16px;
-        height: 16px;
-        background: url(../images/level_5.png);
-    }
-
-    div:nth-of-type(16){
-        width: 38px;
-        height: 38px;
-        background: url(../images/info.png);
-    }
-    div:nth-of-type(17){
-        width: 13px;
-        height: 11px;
-        background: url(../images/open.png);
-    }
-    div:nth-of-type(18){
-        width: 46px;
-        height: 44px;
-        background: url(../images/sina.png);
-    }
-    div:nth-of-type(19){
-        width: 384px;
-        height: 48px;
-        background: url(../images/loading.png);
-    }
-    div:nth-of-type(20){
-        width: 48px;
-        height: 48px;
-        background: url(../images/sina_logo.png);
-    }
-    div:nth-of-type(21){
-        width: 15px;
-        height: 12px;
-        background: url(../images/speaker.png);
-    }
-    div:nth-of-type(22){
-        width: 81px;
-        height: 38px;
-        background: url(../images/tips_icons.png);
-    }
-    div:nth-of-type(23){
-        width: 48px;
-        height: 48px;
-        background: url(../images/sina_logo.png);
-    }
-    div:nth-of-type(24){
-        width: 48px;
-        height: 48px;
-        background: url(../images/txweibo_logo.png);
-    }
-
-    div:nth-of-type(24){
-        width: 48px;
-        height: 48px;
-        background: url(../images/file_video.png);
-    }
-    div:nth-of-type(24){
-        width: 48px;
-        height: 48px;
-        background: url(../images/file_word.png);
-    }
-    div:nth-of-type(24){
-        width: 48px;
-        height: 48px;
-        background: url(../images/folder.png);
-    }
-    div:nth-of-type(24){
-        width: 48px;
-        height: 48px;
-        background: url(../images/folder_o.png);
-    }
-    div:nth-of-type(24){
-        width: 48px;
-        height: 48px;
-        background: url(../images/game.png);
-    }
-    div:nth-of-type(24){
-        width: 48px;
-        height: 48px;
-        background: url(../images/game_o.png);
-    }
-
+div:nth-of-type(12){
+    width: 48px;
+    height: 48px;
+    background: url(../images/file_default.png);
+}
+div:nth-of-type(13){
+    width: 48px;
+    height: 48px;
+    background: url(../images/file_image.png);
+}
+div:nth-of-type(14){
+    width: 48px;
+    height: 48px;
+    background: url(../images/file_music.png);
+}
+div:nth-of-type(15){
+    width: 48px;
+    height: 48px;
+    background: url(../images/file_pdf.png);
+}
+div:nth-of-type(16){
+    width: 48px;
+    height: 48px;
+    background: url(../images/file_txt.png);
+}
+div:nth-of-type(17){
+    width: 48px;
+    height: 48px;
+    background: url(../images/file_word.png);
+}
+div:nth-of-type(18){
+    width: 48px;
+    height: 48px;
+    background: url(../images/file_video.png);
+}
+div:nth-of-type(19){
+    width: 48px;
+    height: 48px;
+    background: url(../images/file_ppt.png);
+}
+div:nth-of-type(20){
+    width: 38px;
+    height: 38px;
+    background: url(../images/tips_icons.png);
 }
