--- a/test/css/style3.css
+++ b/test/css/style3.css
@@ -1,16 +1,17 @@
 body{
-    background: #ddd;
+    background: #bbb;
 }
 div{
     min-height: 10px;
-    border: 1px solid #339;
+    border: 1px solid #8A7676;
     margin: 20px;
     min-width: 10px;
+    float: left;
 }
 div:nth-of-type(1){
-    width: 12px;
-    height: 12px;
-    background: url(../images/add.png);
+    width: 48px;
+    height: 48px;
+    background: url(../images/appmarket.png);
 }
 div:nth-of-type(2){
     width: 48px;
@@ -84,12 +85,12 @@ div:nth-of-type(15){
 }
 
 div:nth-of-type(16){
-    width: 38px;
-    height: 38px;
-    background: url(../images/info.png);
+    width: 48px;
+    height: 48px;
+    background: url(../images/file_rar.png);
 }
 div:nth-of-type(17){
-    width: 13px;
-    height: 11px;
-    background: url(../images/open.png);
+    width: 81px;
+    height: 38px;
+    background: url(../images/tips_icons.png);
 }
