--- a/test/css/style-mobile.css
+++ b/test/css/style-mobile.css
@@ -20,7 +20,7 @@ div:nth-of-type(2){
 div:nth-of-type(3){
     width: 19px;
     height: 19px;
-    background: url(../images/info.png);
+    background: url(../images/info.png);  
     background-size: 19px 19px;
 }
 div:nth-of-type(4){
@@ -28,6 +28,10 @@ div:nth-of-type(4){
     height: 18px;
     /* 已合并的图片 */
     background: url(../images/bright-star.png);
+    background: -moz-linear-gradient(top, red, rgba(0, 0, 255, 0.5));  
+    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#ff0000), to(rgba(0, 0, 255, 0.5)));  
+    background: -o-linear-gradient(top, red, rgba(0, 0, 255, 0.5)); 
+
 }
 div:nth-of-type(5){
     width: 19px;
