--- a/test/css/style-mobile.css
+++ b/test/css/style-mobile.css
@@ -9,7 +9,8 @@ div{
     float: left;
 }
 div:nth-of-type(1){
-    width: 12px;
+    color: #fff;
+    width    : 12px;
     height: 12px;
     background-image: url(../images/add.png);
 }
