功能开发完成，参数配置功能验证成功，下一步：代码结构优化！！

--- a/test/css/style-mobile.css
+++ b/test/css/style-mobile.css
@@ -40,7 +40,7 @@ div:nth-of-type(4){
 div:nth-of-type(5){
     width: 19px;
     height: 19px;
-    background: url(../images/info.png);
+    background: url(http://www.baidu.com/img/bdlogo.png);
     background-size: 100% 100%;
 }
 
