除了SpriteImage类外整体代码整理了

--- a/test/css/test-tmp.css
+++ b/test/css/test-tmp.css
@@ -31,7 +31,7 @@
     background-position: -10px -20px; 
 }
 .hello_icon{
-    background: url(../images/app_icon.png#unsprite);
+    background: url(../images/app_icon.png);
     background-position-x: -10px;
     background-position-y: -20px;  
 }
